Bug 1470938 - Unbreak build without GeckoProfiler after bug 1448040. r=dthayer

MozReview-Commit-ID: I7xAvNtNwe

--HG--
extra : rebase_source : 68f24ef3e5dab0036eede84ae2cb9dea27b86576